--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -226,10 +226,10 @@
 
 <details><summary><strong>Employee leasing</strong>: Tax planning arrangements</summary>
 <div id="example-leasing"> 
-          <p>"Employee leasing" arrangements are arrangements where an Indian is employed through an on-reserve employment agency but works off-reserve for an off-reserve organization.</p> <p>The Federal Court of Appeal and the Tax Court of Canada have considered these arrangements and, in the majority of cases, have concluded that the employment income at issue was <strong>not</strong> exempt from tax under section 87 of the <em>Indian Act</em>. Recent decisions have confirmed that, as with all employment situations, the factors connecting the income to a reserve must be identified and weighed to determine if the employment income is taxable or exempt. The location of the employer on a reserve is not a connecting factor strong enough, on its own, to exempt the employment income from tax.</p> <p>As a result, when an employee is “leased” by an on-reserve employer, but carries on duties of employment off-reserve, section 87 of the <em>Indian Act</em> (and Guideline 2 of the<em> Indian Act</em> Exemption for Employment Income Guidelines) will not apply to exempt the employment income unless:</p> 
-<ol> 
- <li>other factors connect the income to a reserve; or</li> 
- <li>there is specific evidence that would give greater weight to the employer as a connecting factor.</li> 
+          <p>"Employee leasing" arrangements are arrangements where an Indian is employed through an on-reserve employment agency but works off-reserve for an off-reserve organization.</p> <p>The Federal Court of Appeal and the Tax Court of Canada have considered these arrangements and, in the majority of cases, have concluded that the employment income at issue was <strong>not</strong> exempt from tax under section 87 of the Indian Act. Recent decisions have confirmed that, as with all employment situations, the factors connecting the income to a reserve must be identified and weighed to determine if the employment income is taxable or exempt. The location of the employer on a reserve is not a connecting factor strong enough, on its own, to exempt the employment income from tax.</p> <p>As a result, when an employee is “leased” by an on-reserve employer, but carries on duties of employment off-reserve, section 87 of the Indian Act (and Guideline 2 of the Indian Act Exemption for Employment Income Guidelines) will not apply to exempt the employment income unless <strong>one</strong> of the following apply:</p> 
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">Other factors connect the income to a reserve</li> 
+<li class="cnjnctn-col">There is specific evidence that would give greater weight to the employer as a connecting factor</li> 
 </ol> 
 </div>   
 </details>  
@@ -388,7 +388,7 @@ In determining whether your commercial fishing business income is connected to a
 
   
         <h3 id="hdng8">Farming</h3>
-<p>Throughout the following text, for purposes of the tax exemption under section 87 of the <em>Indian Act</em>, the CRA uses the term “Indian” because it has a legal meaning in the <em>Indian Act</em>.</p>
+<p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>If you earn farming income, your income from that business is treated the same as any other business income. If your farming activities take place on a reserve, your farming income is generally tax-exempt. If your farming activities take place mainly off a reserve, you have to pay tax on your farming income.</p>
 <p>If you are a grain, vegetable, or fruit farmer, the location of the land where your crops are grown or harvested is the most important factor in connecting your income to a reserve. If you are a cattle rancher, the location of your rangeland is the most important connecting factor. If you are involved in other types of farming, the location of your farmland may vary in importance, depending on the nature of your business and the facts of your case. For instance, if your income is from a dairy operation, the location of your milking activities is likely more important than the location of your pastures or hayfields.</p>
 <p>If some of your revenue-generating activities from farming take place on a reserve and the rest off a reserve, the exemption may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation is more reasonable.</p>
@@ -448,12 +448,12 @@ In determining whether your commercial fishing business income is connected to a
 
     
         <h2 id="hdng10">Other income</h2>
-<p>Throughout the following text, for purposes of the tax exemption under section 87 of the <em>Indian Act</em>, the CRA uses the term “Indian” because it has a legal meaning in the <em>Indian Act</em>.</p>
+<p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 
  
    
         <h3>Registered retirement savings plan (RRSP) income</h3>
-<p>If you earn exempt income only and you have contributed to an RRSP, you cannot deduct your contributions on your tax return. By the same token, any withdrawals of your <strong>original</strong> RRSP contributions will not be taxable. However, since your exempt income did not create any RRSP contribution room, you will have to pay a penalty under Part X.1 of the <em>Income Tax Act</em> for your non-deductible contributions to your RRSP. Any investment earnings you withdraw from the RRSP will be taxed in the same way as interest and investment income.</p>
+<p>If you earn exempt income only and you have contributed to an RRSP, you cannot deduct your contributions on your tax return. By the same token, any withdrawals of your <strong>original</strong> RRSP contributions will not be taxable. However, since your exempt income did not create any RRSP contribution room, you will have to pay a penalty under Part X.1 of the Income Tax Act for your non-deductible contributions to your RRSP. Any investment earnings you withdraw from the RRSP will be taxed in the same way as interest and investment income.</p>
 <p>If you earn taxable income and contribute to an RRSP, the normal rules on claiming RRSP deductions apply to you (i.e., contributions will be deductible within the allowable limits based on earned income, and all withdrawals will be taxable).</p>
 
 
