--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -120,22 +120,21 @@
         <h2 id="hdng1">Overview</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>As an Indian, you are subject to the same tax rules as other Canadian residents unless your income is eligible for the tax exemption under section 87 of the Indian Act. That exemption applies to the income of an Indian that is earned on a <a href="#hdng17">reserve</a> or that is considered to be earned on a reserve, as well as to goods bought on, or delivered to, a reserve.</p>
-<h3>Daniels decision</h3>
+ <details><summary>Daniels decision</summary>
 <p>The 2016 Supreme Court of Canada decision in Daniels v. Canada, 2016 SCC 12, declared that Métis and non-status Indians are “Indians” for the purpose of federal Parliament’s law-making jurisdiction under subsection 91(24) of the Constitution Act, 1867. However, this decision did not change who is an “Indian” in the Indian Act.</p>
 <p>The tax exemption available under the Indian Act only applies to an individual who is an “Indian” as defined in the Indian Act. Therefore, the Daniels decision <strong>does not</strong> change the group of individuals currently eligible for the tax exemption. We will continue to apply and administer the Indian Act tax exemption in the same way as prior to the Daniels decision.</p>
-<h3>Benoit legal decision</h3>
+ </details>
+
+ <details><summary>Benoit legal decision</summary>
 <p>On June 11, 2003, the Federal Court of Appeal ruled that Treaty&nbsp;8 does not provide a general tax exemption.</p>
 <p>Refer to the Federal Court of Appeal <a href="http://decisions.fca-caf.gc.ca/en/2003/2003fca236/2003fca236.html">reasons for judgment</a> in the Benoit case.</p>
 <p>Mr. Benoit and the Treaty 8 plaintiffs subsequently filed an application for leave to appeal the decision to the Supreme Court of Canada. On April&nbsp;29,&nbsp;2004, the Supreme Court of Canada dismissed the application for leave to appeal. The Court of Appeal's decision is now valid and binding.</p>
 <p>While it is now clear that Treaty 8 Indians are not entitled to a general tax exemption, if the property of a Treaty&nbsp;8 Indian is situated on a reserve, it continues to be eligible for the tax exemption under section&nbsp;87 of the Indian Act.</p>
-
-       <h3>Self-governing agreements</h3>
+ </details>
+ <details><summary>Self-governing agreements</summary>
+      
  <p>If you are a member of a First Nations group that has negotiated a self-governing or tax agreement with the Government of Canada, the information on these pages may not apply to you. To find out, contact your First Nations government.</p>  
-    
-
-   
-        <h3>For more information</h3>
- <p>If you have questions, call us toll free at <strong>1-800-959-8281</strong>.</p>  
+     </details>
 
   
         <h2 id="hdng2">Tax exemption</h2>
