--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -138,22 +138,23 @@
 
   
         <h2 id="hdng2">Tax exemption</h2>
-<p>If you have personal property-including income-situated on a reserve, that property is exempt from tax under section 87 of the Indian Act. Contact your local band office to find out if a tract of land is a reserve for purposes of this exemption. If your band is not certain about the status of the land, contact <a href="http://www.aadnc-aandc.gc.ca/eng/1100100010002/1100100010021">Indigenous and Northern Affairs Canada</a>.</p>
+<p>If you have personal property-including income-situated on a reserve, that property is exempt from tax under section 87 of the Indian Act. Contact your local band office to find out if a tract of land is a reserve for purposes of this exemption. If your band is not certain about the status of the land, contact <a href="https://www.canada.ca/en/crown-indigenous-relations-northern-affairs.html">Crown-Indigenous Relations and Northern Affairs Canada</a>.</p>
 
    
         <h3 id="hdng2-1">Facts</h3>
-<ul>
-<li>A tax exemption for Indian property situated on reserves has existed since before Confederation.</li>
-<li>The Supreme Court of Canada has stated that this exemption is linked to the protection of reserve land and property.</li>
-<li>The Court has concluded that the purpose of the exemption is to make sure tax does not erode the use of Indian property on reserves.</li>
-<li>The Court has indicated that this tax exemption is not intended to remedy the economically disadvantaged position of Indigenous people in Canada or bring economic benefits to them.</li>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> A tax exemption for Indian property situated on reserves has existed since before Confederation</li>
+<li><span class="fas fa-check fa-li text-success"></span> The Supreme Court of Canada has stated that this exemption is linked to the protection of reserve land and property</li>
+<li><span class="fas fa-check fa-li text-success"></span> The Court has concluded that the purpose of the exemption is to make sure tax does not erode the use of Indian property on reserves</li>
+<li><span class="fas fa-check fa-li text-success"></span> The Court has indicated that this tax exemption is not intended to remedy the economically disadvantaged position of Indigenous people in Canada or bring economic benefits to them</li>
 </ul>
 <p>Also, based on Supreme Court decisions, Indian property <strong>not</strong> situated on a reserve will generally be subject to tax just like property held by other Canadians.</p>
-<h3 id="hdng2-2">Bill C-3</h3>
+<details><summary>Bill C-3</summary>
 <p>If you are entitled to be registered as an Indian under Bill&nbsp;C-3 (also known as the Gender Equity in Indian Registration Act, SC 2010, c.18), you may qualify for the section 87 tax exemption for property situated on a reserve starting on January&nbsp;31,&nbsp;2011. This is the date that Bill&nbsp;C-3 came into effect. Only income you earn, or purchases you make on a reserve, on or after January&nbsp;31,&nbsp;2011, may be exempt from tax.</p>
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
 <p>For general information about Bill&nbsp;C-3 including how to register as an Indian with ISC, please visit <a href="https://www.canada.ca/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
-<h3 id="hdng2-3">Bill S-3</h3>
+ </details>
+<details><summary>Bill S-3</summary>
 <p>Bill&nbsp;S-3, An Act to amend the Indian Act in response to the Superior Court of Quebec decision in Descheneaux c. Canada (Procureur général), SC&nbsp;2017, c.25, makes two sets of amendments, each with its own effective date.</p>
 <p>The first set of amendments made by Bill&nbsp;S-3 came into force on December&nbsp;22,&nbsp;2017, and addressed issues resulting from the Descheneaux decision including specific situations of residual sex-based inequities in Indian registration. These inequities involve issues with respect to siblings, cousins, omitted minor children, and instances where parentage is unknown or unstated.&nbsp;&nbsp;&nbsp;</p>
 <p>If you are entitled to be registered as an Indian under the first set of amendments, you may qualify for the section 87 tax exemption for property situated on a reserve starting on December&nbsp;22,&nbsp;2017. Only income you earn, or purchases you make, on a reserve, on or after December&nbsp;22,&nbsp;2017, may be exempt from tax.</p>
@@ -161,8 +162,10 @@
 <p>If you are entitled to be registered as an Indian under the second set of amendments of Bill&nbsp;S‑3, you may qualify for the section 87 tax exemption for property situated on a reserve starting on August&nbsp;15,&nbsp;2019. Only income you earn, or purchases you make, on a reserve, on or after August&nbsp;15,&nbsp;2019, may be exempt from tax.</p>
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
 <p>For general information about Bill&nbsp;S-3 including how to register as an Indian with ISC, please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
-<h3 id="hdng2-4">Qalipu Mi'kmaq First Nation</h3>
-<p>The Qalipu Mi’kmaq First Nation was established in&nbsp;2011 as a landless band.</p>
+ </details>
+
+<details><summary>Qalipu Mi'kmaq First Nation</summary>
+<p id="hdng2-4">The Qalipu Mi’kmaq First Nation was established in&nbsp;2011 as a landless band.</p>
 <h4>Founding members</h4>
 <p>If you are entitled to be registered as an Indian under the Indian Act because of the creation of the Qalipu Mi’kmaq First Nation, you may qualify for the section&nbsp;87 tax exemption for property situated on a reserve starting from the coming into force date of the Order in Council adding your name to the Founding Members List. There are five Orders in Council that have come into force on September&nbsp;22,&nbsp;2011, October&nbsp;12,&nbsp;2011, March&nbsp;30,&nbsp;2012, June&nbsp;20,&nbsp;2012, and June&nbsp;25,&nbsp;2018. Only income you earn, or purchases you make on a reserve, on or after the date of the specific Order in Council that added your name to the Founding Members List may be exempt from tax.</p>
 <p>A number of individuals who no longer meet the criteria for founding membership were removed from the updated Founding Members List under the June&nbsp;25,&nbsp;2018 Order in Council. Individuals who were removed from the Founding Members List were also removed from the Indian Register if they were unable to retain their registered Indian status under a different provision of the Indian Act. If you were removed from the Indian Register on August&nbsp;31,&nbsp;2018, you are no longer registered as an Indian under the Indian Act. Income you earn, or purchases you make on or after August&nbsp;31,&nbsp;2018 will not qualify for the exemption from tax. The CRA will not be seeking repayment of any tax exemption for which you qualified while you were registered as an Indian.</p>
@@ -172,7 +175,7 @@
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
 <p>For more information about how to register as an Indian with ISC, please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a>.</p>
 <p>To learn more about the Qalipu Mi’kmaq First Nation enrolment process and the 2018 updates to Founding Members List, visit <a href="https://www.sac-isc.gc.ca/eng/1319805325971/1572459825339">Have you applied to join the Qalipu Mi'kmaq First Nation</a>.</p>
-
+</details>
     
         <h2 id="hdng3">Employment income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
