--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -179,12 +179,15 @@
     
         <h2 id="hdng3">Employment income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
-<p>Employment income is exempt from income tax under paragraph 81(1)(a) of the Income Tax Act and section 87 of the Indian Act <strong>only if</strong> the income is situated on a reserve. If your employment income is exempt from tax, you do not have to include that income when you file your personal income tax return. If you live in a province that provides child and family benefits which are based on family income, it may be to your advantage to report your exempt income when you file your personal income tax return in order to maximize your provincial benefit entitlements. To ensure that you retain tax-exempt status in respect of the reported amounts, you should contact us toll free at <strong>1-800-959-8281</strong> for instructions on how to report the amounts.</p>
+<p>Employment income is exempt from income tax under paragraph 81(1)(a) of the Income Tax Act and section 87 of the Indian Act <strong>only if</strong> the income is situated on a reserve. If your employment income is exempt from tax, you do not have to include that income when you file your personal income tax return. If you live in a province that provides child and family benefits which are based on family income, it may be to your advantage to report your exempt income when you file your personal income tax return in order to maximize your provincial benefit entitlements. </p>
+<p>To ensure that you retain tax-exempt status in respect of the reported amounts, you should contact us toll free at <strong>1-800-959-8281</strong> for instructions on how to report the amounts.</p>
+ 
+<h3>Connecting factors test</h3>
 <p>The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
-<p>The <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">Indian Act Exemption for Employment Income Guidelines</a> will help you determine whether your employment income is considered to be situated on a reserve. The guidelines are an administrative tool and deal with the most common employment situations. After each guideline, there are examples showing how the guideline applies.</p>
-<h3>Uncommon employment situations</h3>
+<h4>Common situations</h4>
+<p>Use the <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations-pop.html">Indian Act exemption for employment income guidelines</a> to help you determine whether the employment income is considered to be situated on a reserve. The guidelines are an administrative tool and deal with the most common employment situations. After each guideline, there are examples showing how the guideline applies.</p>
+<h3>Uncommon situations</h3>
 <p>In some situations, there are other uncommon factors that result in employment income being treated differently than the typical scenarios the Guidelines describe. In such cases, any factors connecting the income to a reserve must be analysed in accordance with the various court decisions to determine if the tax-exemption applies. </p>
-
 
 <details><summary>Examples of uncommon employment situations where the guidelines do not apply</summary>
 <section class="alert alert-info">
@@ -223,7 +226,6 @@
 
  </details>
 
-<p>If you need help, call us toll free at <strong>1-800-959-8281</strong>.</p>
 <p>Expenses such as union dues and registered pension plan contributions are deducted from the specific source of employment income that they relate to. The net amount of this employment income will be exempt from taxes if the employment income is considered to be situated on a reserve. Any expenses that relate to employment income that is tax-exempt cannot be claimed as deductions against other taxable sources of employment income.</p>
 
 <details><summary>Employee leasing: Tax planning arrangements</summary>
@@ -235,7 +237,7 @@
 </ol> 
 </div>   
 </details>  
-
+<p>If you need help, call us toll free at <strong>1-800-959-8281</strong>.</p>
 
         <h2 id="hdng4">Employment-related income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
