--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -247,15 +247,18 @@
         <h2 id="hdng4">Employment-related income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
-<h3>Registered pension plan benefits</h3>
+<details><summary>Registered pension plan benefits</summary>
 <p>If you receive registered pension plan (RPP) benefits as a result of employment income that was exempt from income tax under section 87 of the Indian Act, the RPP benefits will also be exempt from income tax. If a portion of your employment income was exempt, then a similar portion of the related registered pension plan benefits will be exempt from income tax.</p>
-<h3>Pension transfers from an RPP to an RRSP/RRIF</h3>
+</details>  
+<details><summary>Pension transfers from an RPP to an RRSP/RRIF</summary>
 <p>If you transferred an amount from your registered pension plan (RPP) to a registered retirement savings plan (RRSP), and the registered pension plan related to employment income that was wholly or partially exempt from income tax under section 87 of the Indian Act, the amounts you receive from the RRSP will also be wholly or partially tax-exempt in the same proportion. This also applies to payments from a registered retirement income fund (RRIF). Any RRIF payments you receive will be taxed in the same manner as payments from the particular registered plan from which property was transferred to the RRIF.</p>
-<h3>Pension benefits on marriage breakdown</h3>
+</details>  
+<details><summary>Pension benefits on marriage breakdown</summary>
 <p>If you are an Indian and receive your share of your former spouse’s or common-law partner’s pension benefits as a result of the breakdown of your marriage or common-law partnership, and it relates to your former spouse’s or common-law partner’s employment income that was wholly or partially exempt from income tax under section 87 of the Indian Act, the amounts you receive will also be wholly or partially exempt from income tax. In addition, to be eligible for the exemption, you must have a right to an interest in the pension benefits and be legally entitled to the pension income.</p>
-<h3>Survivor pension benefits</h3>
+</details>  
+<details><summary>Survivor pension benefits</summary>
 <p>If you are an Indian and, as a beneficiary, receive survivor pension benefits that relate to the deceased member’s employment income that was wholly or partially exempt from tax under section 87 of the Indian Act, the amount you receive will also be wholly or partially exempt from income tax in the same proportion as the employment income to which it relates.</p>
-
+</details>  
   
         <h2 id="hdng5">Business income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
