--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -182,7 +182,7 @@
 <p>Employment income is exempt from income tax under paragraph 81(1)(a) of the Income Tax Act and section 87 of the Indian Act <strong>only if</strong> the income is situated on a reserve. If your employment income is exempt from tax, you do not have to include that income when you file your personal income tax return. If you live in a province that provides child and family benefits which are based on family income, it may be to your advantage to report your exempt income when you file your personal income tax return in order to maximize your provincial benefit entitlements. </p>
 <p>To ensure that you retain tax-exempt status in respect of the reported amounts, you should contact us toll free at <strong>1-800-959-8281</strong> for instructions on how to report the amounts.</p>
  
-<h3>Connecting factors test</h3>
+<h3>Connecting factors for employment income</h3>
 <p>The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
 <h4>Common situations</h4>
 <p>Use the <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations-pop.html">Indian Act exemption for employment income guidelines</a> to help you determine whether the employment income is considered to be situated on a reserve. The guidelines are an administrative tool and deal with the most common employment situations. After each guideline, there are examples showing how the guideline applies.</p>
@@ -263,17 +263,16 @@
         <h2 id="hdng5">Business income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>A business is an activity that you intend to carry on for profit and includes:</p>
-<ul>
-<li>a profession</li>
-<li>a calling</li>
-<li>a trade</li>
-<li>a manufacture</li>
-<li>an undertaking of any kind</li>
-<li>an adventure or concern in the nature of trade.</li>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> Profession</li>
+<li><span class="fas fa-check fa-li text-success"></span> Calling</li>
+<li><span class="fas fa-check fa-li text-success"></span> Trade</li>
+<li><span class="fas fa-check fa-li text-success"></span> Manufacture</li>
+<li><span class="fas fa-check fa-li text-success"></span> Undertaking of any kind</li>
+<li><span class="fas fa-check fa-li text-success"></span> Adventure or concern in the nature of trade.</li>
 </ul>
-<p>For more information about calculating and reporting your business income or loss, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-income.html">Small business and self-employed income</a>.</p>
 <p>The information on this page is for sole proprietorships, partnerships, and self-employed individuals with business income that may be exempt from tax if that income is situated on a reserve. If your business is incorporated, this information does not apply to you because section 87 of the Indian Act does not apply to corporations, even if they are owned or controlled by an Indian.</p>
-
+<p>For more information about calculating and reporting your business income or loss, see <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/business-income-tax-reporting/business-income.html">Small business and self-employed income</a>.</p>
  
         <h3 id="hdng5-1">Connecting factors for business income</h3>
 <p>If your business income is situated on a reserve, it is exempt from tax under section 87 of the Indian Act. The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
