--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -279,18 +279,18 @@
 <p>Your business income is generally exempt from tax when the actual income-earning activities of the business take place on a reserve. If your business activities are mostly carried on off a reserve, your business income would generally be considered taxable because the exemption under section 87 does not apply.</p>
 <p>When applying the connecting factors test to business income, the courts have indicated that the most significant connecting factors are:</p>
 <div id="ajax-self-connect">
-<ul>
-<li>Where the income earning activities of the business take place</li>
-<li>The type of business and the nature of the business activities</li>
-<li>Where the management and decision making activities of the business take place</li>
-<li>Where the customers are located</li>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> Where the income earning activities of the business take place</li>
+<li><span class="fas fa-check fa-li text-success"></span> The type of business and the nature of the business activities</li>
+<li><span class="fas fa-check fa-li text-success"></span> Where the management and decision making activities of the business take place</li>
+<li><span class="fas fa-check fa-li text-success"></span> Where the customers are located</li>
 </ul>
 <p>Other connecting factors that the courts have found to be less significant are:</p>
 <ul>
-<li>Whether or not you live on a reserve</li>
-<li>Whether you maintain an office on a reserve or take business orders from a location on a reserve</li>
-<li>Whether your books and records are kept on a reserve</li>
-<li>Whether your administrative, clerical, or accounting activities take place on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> Whether or not you live on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> Whether you maintain an office on a reserve or take business orders from a location on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> Whether your books and records are kept on a reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> Whether your administrative, clerical, or accounting activities take place on a reserve</li>
 </ul>
 <p>The above listing of connecting factors is not an exhaustive listing since there are other potential connecting factors that could apply depending on the fact situation. In addition, a connecting factor will have different relevance and weight depending upon the specific facts of each case. As a result, there is no standard test that can be used to determine if business income is situated on a reserve.</p>
 
@@ -305,15 +305,15 @@
 <p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
 </section>
  <div id="example-self-business"> 
-    <h4>Example - Business A</h4>
-    <p>John lives on a reserve and operates an independent logging business as a sole proprietorship. He cuts timber on land off the reserve for a logging company that is located and sells it off the reserve. In the absence of other factors, John's income from this business is considered to be <strong>taxable</strong>, because his income-earning activities and customer is off the reserve.</p>
-    <h4>Example - Business B</h4>
+    <h4>Example - Individual A</h4>
+    <p>Individual A lives on a reserve and operates an independent logging business as a sole proprietorship. Individual A cuts timber on land off the reserve for a logging company that is located and sells it off the reserve. In the absence of other factors, individual A's income from this business is considered to be <strong>taxable</strong>, because the individual A income-earning activities and customer is off the reserve.</p>
+    <h4>Example - Individual B</h4>
   
-    <p>Delia owns a retail store on a reserve. The store sells goods to both Indian and non-Indian customers. Since Delia's business activities take place on a reserve, her income from this business is <strong>tax-exempt</strong>.</p>
+    <p>Individual B owns a retail store on a reserve. The store sells goods to both Indian and non-Indian customers. Since individual B's business activities take place on a reserve, their income from this business is <strong>tax-exempt</strong>.</p>
 
-    <h4>Example - Business C</h4>
-    <p>Peter operates a trucking business that hauls logs from cutting sites located off-reserve to logging mills located off-reserve.&nbsp; His only customer is a logging company that is not located on a reserve. Peter has a garage on a reserve where he stores his trucks and an on-reserve office where he keeps the books and records for the business.&nbsp; Peter travels 20 kms from his off-reserve home each day to pick up his truck from the on-reserve garage. He then travels to the off-reserve cutting sites. Peter spends a few hours each week doing the bookkeeping for the business at the on-reserve office.</p>
-    <p>Peter’s self-employed income is considered to be <strong>taxable</strong>. The following factors are the most significant and connect the income off-reserve:</p>
+    <h4>Example - Individual C</h4>
+    <p>Individual C operates a trucking business that hauls logs from cutting sites located off-reserve to logging mills located off-reserve. Individual C's only customer is a logging company that is not located on a reserve. Individual C has a garage on a reserve where individual C stores their trucks and an on-reserve office where the individual C keeps the books and records for the business. Individual C travels 20 kms from their off-reserve home each day to pick up their truck from the on-reserve garage. Individual C then travels to the off-reserve cutting sites. Individual C spends a few hours each week doing the bookkeeping for the business at the on-reserve office.</p>
+    <p>Individual C’s self-employed income is considered to be <strong>taxable</strong>. The following factors are the most significant and connect the income off-reserve:</p>
     <ul>
       <li>The income-generating activities of hauling lumber occurs off-reserve.</li>
       <li>The business’ only customer is located off-reserve.</li>
@@ -322,7 +322,7 @@
     </ul>
     <p>The on-reserve activities are limited to providing a place to park the trucks when not in use and maintain the books and records. These factors are not significant enough to connect the business income to a reserve.</p>
 
- <h4>Example - Business D</h4>
+ <h4>Example - Individual D</h4>
     <p>Ronald operates a business that clears land off-reserve for oil and gas companies. He has always lived on a reserve and is an active member of his First Nation’s community. He started and grew his business with his wife from a home office on-reserve. It is from this office that Ronald bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, Ronald ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve.<br>
       This type of business has been characterized by the courts as “nomadic”, as it has a base in one area (on-reserve), while engaging in work activities in other areas (off-reserve). The courts have held that the fact that the work activities were undertaken off-reserve would not in and of itself result in the income earned being situated off-reserve. <br>
       In this scenario, Ronald’s self-employed business income is <strong>tax-exempt</strong>. The following factors are given the most weight and connect the income to a reserve:</p>
